Changelog
=========

1.0rc4 - unreleased
-------------------

* Fix quote_param to always use lxml.etree.XSLT.strparam.

* Handle rules file without a theme to allow drop or replace content.

1.0rc3 - 2011-07-04
-------------------

* Support for ``filter_xpath`` requests for ESI/SSI includes.

* Do not try to transform HEAD requests, otherwise you get:
  ``XMLSyntaxError: no element found``.
  [maurits]

1.0rc2 - 2011-06-08
-------------------

* Fix detection of Content-Type.

* Add doctype option to wsgi middleware to support HTML5 output.

* Fix line endings for included external content.

1.0rc1 - 2011-05-24
-------------------

* Fix diazocompiler --output option.

1.0b4 - 2011-05-17
------------------

* Implement drop theme-children.

1.0b3 - 2011-05-16
------------------

* Filter out additional xmlns with notheme.

1.0b2 - 2011-04-27
------------------

* Enable attribute to be included from external documents.

* Enable use of variables/parameters in drop/strip/replace content rule
  conditions.

* Fix a bug whereby a theme could not be loaded from a network location
  even if read_network was enabled.

1.0b1 - 2011-04-22
------------------

* Updated css namespace url to http://namespaces.plone.org/diazo/css

* Added <replace content="...">...</replace> directive.

* Added the ``wsgi`` module, which contains a WSGI middleware filter for
  applying a Diazo themes, as well as a lower level one for applying an
  XSLT transformation to HTML output.

* Moved documentation from the README to the diazo.org website. See
  http://svn.plone.org/svn/plone/plone.org/diazo-docs/trunk.

* Added ``<merge />`` directive

* Added ``<notheme />`` directive

* Added ``<strip />`` directive

* Revised rule set to be based on ``theme-children`` and ``content-children``
  and an explicit ``attributes`` parameter. ``<copy />`` is now only used for
  copying of attributes. ``<prepend />`` and ``<append />`` are deprecated