@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<rules xmlns="http://namespaces.plone.org/diazo">
+    <replace theme="/html/head/title" content="/html/head/title"/>
+</rules>
